# AimeeCloud

./: .env.example  .gitignore  .kimi_checkpoint_monitor_camera.md  AGENTS.md  AIMEE_NAV_REWRITE_HANDOFF.md  Aimee_Project_Plan.md  CAMERA_DEMO_SUCCESS.md  CAMERA_DEMO_SUMMARY.md  CHECKPOINT.md  Dockerfile  LEROBOT_ROS2_INTEGRATION_GUIDE.md  README.md  VISION_IMPLEMENTATION_GUIDE.md  VISION_SYSTEM_SUMMARY.md  check_lidar_alignment.py  docker-compose.yml  explore_node.py  fastdds_disable_shm.xml  fastdds_shm.xml  fastdds_shm_simple.xml  frames_2026-04-22_18.41.31.gv  frames_2026-04-22_21.56.46.gv  frames_2026-04-22_22.31.19.gv  frames_2026-04-22_22.44.32.gv  goal_movement_test.py  obstacle_test.py  obstacle_test_coarse.py  odom_calibration.py  rviz_check.sh  setup_env.sh  square_test.py  start_monitor.sh  test_a.py  test_cmdvel.py  test_pick_place.sh  test_session.sh
config/: aimee_intent_config.json  robot_config.yaml  skills_config.yaml
deploy/: README.md  backup-to-unoq.sh  bootstrap.sh  push-public.sh  sync-models.sh
docs/: AimeeCloud_Protocol_v1.1.md  BRICK_TO_STANDARD_ROS2_MIGRATION.md  EDGE_IMPULSE_MODELS.md  FUTURE_ENHANCEMENTS.md  HARDWARE_SPEC.md  TTS_PRODUCTION_PLAN.md
libdev_v2.1.0_8/OBSBOT_Sample/: CMakeLists.txt  main.cpp
log/: latest_build
obsbot_helper/: camera_daemon.cpp  keep_camera_awake.sh  obsbot_ctrl  obsbot_ctrl.cpp
scripts/: create_brick.py  fix_routing.sh  setup_udev_rules.sh  start_slam_minimal.sh  start_slam_nav2.sh
src/aimee_brick_template/brick_template/: pyproject.toml
src/aimee_brick_template/brick_template/src/arduino/app_bricks/template/: __init__.py  brick_config.yaml  template.py
src/aimee_bringup/: CMakeLists.txt  package.xml
src/aimee_bringup/config/: nav2_params.yaml  slam_params.yaml
src/aimee_bringup/launch/: core.launch.py  nav2.launch.py  navigation.launch.py  robot.launch.py  slam.launch.py  vision_pipeline.launch.py
src/aimee_cloud_bridge/: package.xml  setup.cfg  setup.py
src/aimee_cloud_bridge/aimee_cloud_bridge/: cloud_bridge_node.py
src/aimee_cloud_bridge/config/: cloud_bridge.yaml
src/aimee_description/: CMakeLists.txt  package.xml
src/aimee_description/urdf/: minnie.urdf
src/aimee_intent_router/: README.md  package.xml  setup.cfg  setup.py
src/aimee_intent_router/aimee_intent_router/: intent_router_node.py
src/aimee_intent_router/config/: brick_config.yaml
src/aimee_lerobot_bridge/: README.md  package.xml  setup.cfg  setup.py
src/aimee_lerobot_bridge/aimee_lerobot_bridge/: __init__.py  dataset_recorder.py  policy_controller.py  roarm_m3_http_driver.py  teleop_keyboard.py  test_arm_basic.py
src/aimee_lerobot_bridge/config/: roarm_m3_config.yaml
src/aimee_lerobot_bridge/launch/: data_collection.launch.py  policy_inference.launch.py  teleop.launch.py
src/aimee_lerobot_bridge/scripts/: test_arm_basic.py
src/aimee_llm_server/: README.md  package.xml  setup.cfg  setup.py
src/aimee_llm_server/aimee_llm_server/: llm_server_node.py
src/aimee_llm_server/aimee_llm_server/brick/: __init__.py  llm_server.py
src/aimee_llm_server/config/: brick_config.yaml
src/aimee_manipulation/: package.xml  setup.cfg  setup.py
src/aimee_manipulation/aimee_manipulation/: __init__.py  arm_controller_node.py  pick_place_server.py  test_pick_place_client.py
src/aimee_msgs/: CMakeLists.txt  package.xml
src/aimee_msgs/action/: ExecuteSkill.action  LLMGenerate.action  PickPlace.action
src/aimee_msgs/msg/: ArmCommand.msg  CameraAction.msg  CloudIntent.msg  FaceDetection.msg  GraspPose.msg  Intent.msg  MotorAction.msg  ObjectDetection.msg  TrackingCommand.msg
src/aimee_msgs/srv/: CaptureSnapshot.srv
src/aimee_nav/: CMakeLists.txt  README.md  package.xml
src/aimee_nav/aimee_nav/: __init__.py  aimee_nav_node.py  ld19_driver.py  local_grid_map.py  local_grid_map_cpp.py  obstacle_avoidance.py  pid_controller.py  simple_planner.py  wave_rover_driver.py
src/aimee_nav/config/: aimee_nav_params.yaml  waypoints_example.yaml
src/aimee_nav/launch/: aimee_nav.launch.py
src/aimee_nav/scripts/: aimee_nav_node  benchmark_grid.py  (+9 more)
src/aimee_perception/: package.xml  setup.cfg  setup.py
src/aimee_ros2_monitor/: README.md  package.xml  setup.cfg  setup.py
src/aimee_ros2_monitor/aimee_ros2_monitor/: __init__.py  monitor_node.py
src/aimee_ros2_monitor/aimee_ros2_monitor/templates/: index.html
src/aimee_skill_manager/: README.md  package.xml  setup.cfg  setup.py
src/aimee_test_dashboard/: README.md  package.xml  setup.cfg  setup.py
src/aimee_test_dashboard/aimee_test_dashboard/: __init__.py  dashboard_node.py
src/aimee_test_dashboard/aimee_test_dashboard/web/: app.py  intent_classifier.py
src/aimee_test_dashboard/aimee_test_dashboard/web/templates/: index.html
src/aimee_test_dashboard/config/: asound.conf  brick_config.yaml
src/aimee_tts/: README.md  package.xml  setup.cfg  setup.py
src/aimee_tts/aimee_tts/: tts_engines.py  tts_node.py
src/aimee_tts/aimee_tts/brick/: __init__.py  tts.py
src/aimee_tts/config/: brick_config.yaml
src/aimee_ugv02_controller/: README.md  package.xml  setup.cfg  setup.py
src/aimee_ugv02_controller/aimee_ugv02_controller/: __init__.py  ugv02_controller_node.py  ugv02_teleop_node.py  wasd_teleop.py
src/aimee_ugv02_controller/config/: nav2_params.yaml
src/aimee_ugv02_controller/launch/: ugv02_bringup.launch.py
src/aimee_vision_obsbot/: package.xml  setup.cfg  setup.py  test_obsbot.py
src/aimee_vision_obsbot/aimee_vision_obsbot/: __init__.py  obsbot_keepalive_node.py  obsbot_node.py
src/aimee_vision_obsbot/aimee_vision_obsbot/brick/: __init__.py  obsbot_brick.py  obsbot_sdk_ctypes.py  obsbot_sdk_helper.py  obsbot_sdk_wrapper.py
src/aimee_vision_pipeline/: package.xml  setup.cfg  setup.py
src/aimee_voice_manager/: README.md  package.xml  setup.cfg  setup.py
src/aimee_wake_word_ei/: README.md  package.xml  setup.cfg  setup.py
src/arduino/: package.xml  setup.py
src/arduino/app_utils/: brick.py
src/arduino/arduino/: __init__.py
src/arduino/arduino.egg-info/: SOURCES.txt  top_level.txt
systemd/: aimee-robot.service  aimee-routing.service
(+355 files in other folders)
