<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aimee_llm_server</name>
  <version>0.1.0</version>
  <description>LLM Action Server with streaming and preemption support for AIMEE Robot</description>
  <maintainer email="software@arduino.cc">Arduino SRL</maintainer>
  <license>MPL-2.0</license>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>aimee_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
