<?xml version="1.0"?>
<package format="3">
  <name>aimee_ros2_monitor</name>
  <version>1.0.0</version>
  <description>Lightweight ROS2 monitoring dashboard with rqt_console-like log viewer</description>
  <maintainer email="aimee@arduino.cc">AIMEE Team</maintainer>
  <license>MPL-2.0</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>
  
  <exec_depend>python3-flask</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
