<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aimee_tts</name>
  <version>0.1.0</version>
  <description>Text-to-Speech with gTTS and Piper local TTS support for AIMEE Robot</description>
  <maintainer email="software@arduino.cc">Arduino SRL</maintainer>
  <license>MPL-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
